<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E874CFC8"
    tools:context=".Lote.InformacionDelLote">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/datos_actuales_del_tiempo_en_el_lote"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

    <TextView
        android:id="@+id/tvTemperatura"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitud" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="140dp"
        android:layout_height="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperatura" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toEndOf="@+id/txtFecha"
        app:layout_constraintTop_toTopOf="@+id/txtFecha" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/temperatura_actual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="120dp"
        android:layout_height="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/estado_del_cielo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/fecha_actual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHora"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="120dp"
        android:layout_height="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/velocidad_viento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/tvViento"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="50dp"
        android:layout_height="25sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/km_h"
        app:layout_constraintStart_toEndOf="@+id/tvViento"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="20dp"
        android:layout_height="25sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/c"
        app:layout_constraintStart_toEndOf="@+id/tvTemperatura"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitud" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/humedad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/tvHumedad"
        android:layout_width="40dp"
        android:layout_height="25sp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/tvViento" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="20dp"
        android:layout_height="25sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/porcentaje"
        app:layout_constraintStart_toEndOf="@+id/tvHumedad"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <!--<TextView-->
        <!--android:id="@+id/asd"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="25sp"-->
        <!--android:layout_marginStart="40dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:fontFamily="sans-serif"-->
        <!--android:text="@string/id_del_lote"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/nombre" />-->

    <!--<TextView-->
        <!--android:id="@+id/tvLoteId"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="25sp"-->
        <!--android:layout_marginStart="28dp"-->
        <!--android:fontFamily="sans-serif"-->
        <!--app:layout_constraintStart_toEndOf="@+id/asd"-->
        <!--app:layout_constraintTop_toTopOf="@+id/asd" />-->

    <TextView
        android:id="@+id/txtLatitud"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/latitud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/longitud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLatitud" />

    <TextView
        android:id="@+id/tvLatitud"
        android:layout_width="160dp"
        android:layout_height="25sp"
        android:layout_marginStart="52dp"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toEndOf="@+id/txtLatitud"
        app:layout_constraintTop_toTopOf="@+id/txtLatitud" />

    <TextView
        android:id="@+id/tvLongitud"
        android:layout_width="160dp"
        android:layout_height="25sp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitud" />

    <Button
        android:id="@+id/btnNuevoProyectoCultivo"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_rounded"
        android:text="Nuevo Proyecto de Cultivo"
        android:textColor="#FFFF"
        android:textColorHint="#FFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHumedad" />

    <Button
        android:id="@+id/btnVerHistorial"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:text="Proyectos Registrados"
        android:textColor="#FFFF"
        android:textColorHint="#FFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevoProyectoCultivo" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="Nombre:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvNombreLoteInf"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>